@@ -5,4 +5,8 @@ copyright_holder = Pedro Melo
 copyright_year   = 2012
 
 [@Author::MELO]
+skip_prereqs=^POSIX::AtFork
 test_pod_links = 0
+
+[Prereqs / Recommends]
+POSIX::AtFork = 0
