@@ -1,6 +1,7 @@
 Revision history for Proc-PidChange
  
 {{$NEXT}}
+        * Mention that POSIX::AtFork should be added to your prerequisites
 
 0.001     2012-08-20T12:06:17Z
         * Initial release
